--- a/DFWatch/App.xaml
+++ b/DFWatch/App.xaml
@@ -2,17 +2,63 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DFWatch"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:mde="https://spiegelp.github.io/MaterialDesignExtensions/winfx/xaml"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <materialDesign:BundledTheme BaseTheme="Dark"
-                                             ColorAdjustment="{materialDesign:ColorAdjustment}"
-                                             PrimaryColor="Blue" SecondaryColor="Red" />
+                <md:BundledTheme BaseTheme="Dark"
+                                 ColorAdjustment="{md:ColorAdjustment}"
+                                 PrimaryColor="Blue" SecondaryColor="Red" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.PopupBox.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <!--#region  Style to change the height of the items in the navigation panel-->
+            <Style TargetType="ListBoxItem"
+                   x:Key="NavPaneListBoxItem"
+                   BasedOn="{StaticResource {x:Type ListBoxItem}}">
+                <Setter Property="Height" Value="50" />
+                <Setter Property="MinWidth" Value="150" />
+                <Setter Property="Padding" Value="20,0,0,0" />
+            </Style>
+            <!--#endregion-->
+
+            <!--#region Navigation ListBox Style-->
+            <Style TargetType="ListBox"
+                   x:Key="NavListBox"
+                   BasedOn="{StaticResource {x:Type ListBox}}">
+                <Setter Property="FontFamily" Value="Segoe UI" />
+                <Setter Property="FontSize" Value="15" />
+            </Style>
+            <!--#endregion-->
+
+            <!--#region Style for the page headers-->
+            <Style TargetType="TextBlock"
+                   x:Key="PageHeader">
+                <Setter Property="FontSize" Value="17" />
+                <Setter Property="FontWeight" Value="Bold" />
+                <Setter Property="Padding" Value="10,2" />
+            </Style>
+            <!--#endregion-->
+
+            <!--#region Style the scrollbar-->
+            <Style TargetType="ScrollBar"
+                   BasedOn="{StaticResource MaterialDesignScrollBarMinimal}" />
+            <!--#endregion-->
+
+            <Style TargetType="ListBoxItem"
+                   x:Key="ListBoxComfortable"
+                   BasedOn="{StaticResource {x:Type ListBoxItem}}">
+                <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+                <Setter Property="Height"
+                        Value="58" />
+                <Setter Property="Margin"
+                        Value="10,4,10,4" />
+                <Setter Property="Padding"
+                        Value="3,3,20,5" />
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
