--- a/DFWatch/Pages/LogPage.xaml
+++ b/DFWatch/Pages/LogPage.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="DFWatch.Pages.LogsPage"
+﻿<Page x:Class="DFWatch.Pages.LogPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:DFWatch"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
-      mc:Ignorable="d" Title="LogsPage"
-      d:DesignHeight="450" d:DesignWidth="800"
+      mc:Ignorable="d" d:DesignHeight="450"
+      d:DesignWidth="800"
       Background="{DynamicResource MaterialDesignPaper}"
       Loaded="Page_Loaded"
       TextElement.FontSize="14"
@@ -61,19 +61,24 @@
         <StackPanel Grid.Row="2" Margin="21,0"
                     HorizontalAlignment="Center"
                     Orientation="Horizontal">
-            <Button Margin="0,0,20,0"
+            <Button Width="150" Margin="0,0,20,0"
                     Click="BtnLogFile_Click"
                     Content="View Log File"
                     Style="{StaticResource MaterialDesignPaperButton}" />
-            <Button Margin="0,0,20,0"
+            <Button Width="150" Margin="0,0,20,0"
                     Click="BtnLogFolder_Click"
                     Content="Open Logs Folder"
                     Style="{StaticResource MaterialDesignPaperButton}" />
-            <ToggleButton Margin="0,0,20,0" Padding="0" Height="30"
-                          md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=CheckBold,
-                                                                        Size=20}"
-                          Content="Color Messages" FontSize="14"
-                          Style="{StaticResource MaterialDesignSwitchToggleButton}" />
+            <StackPanel Orientation="Horizontal">
+                <ToggleButton HorizontalAlignment="Left"
+                              Click="ToggleButton_Click"
+                              Width="150"
+                              Content="Colorize Messages"
+                              IsChecked="{Binding ColoredMessages,
+                                                  Source={x:Static local:UserSettings.Setting}}"
+                              Style="{StaticResource MaterialDesignPaperButton}"
+                              TabIndex="24" />
+            </StackPanel>
         </StackPanel>
     </Grid>
 </Page>
