Updated button click method

--- a/DFWatch/Pages/LogPage.xaml
+++ b/DFWatch/Pages/LogPage.xaml
@@ -71,7 +71,7 @@
                     Style="{StaticResource MaterialDesignPaperButton}" />
             <StackPanel Orientation="Horizontal">
                 <ToggleButton HorizontalAlignment="Left"
-                              Click="ToggleButton_Click"
+                              Click="BtnColorMsgToggle_Click"
                               Width="150"
                               Content="Colorize Messages"
                               IsChecked="{Binding ColoredMessages,
