--- a/DFWatch/Pages/LogPage.xaml
+++ b/DFWatch/Pages/LogPage.xaml
@@ -15,9 +15,11 @@
       TextOptions.TextFormattingMode="Ideal"
       TextOptions.TextRenderingMode="Auto">
 
+    <!--#region Page Resources -->
     <Page.Resources>
         <local:ColorConverter x:Key="ColorConverter" />
     </Page.Resources>
+    <!--#endregion-->
 
     <Grid>
         <!--#region Row & Column definitions-->
@@ -28,6 +30,7 @@
         </Grid.RowDefinitions>
         <!--#endregion-->
 
+        <!--#region ListBox for messages -->
         <TextBlock Margin="21,5" FontWeight="DemiBold"
                    Text="Last 100 Log Messages:" />
         <TextBlock Margin="22,5"
@@ -39,6 +42,7 @@
                  Grid.Row="1" Margin="20,5"
                  BorderBrush="{DynamicResource MaterialDesignDivider}"
                  BorderThickness="1.25"
+                 ItemsSource="{x:Static local:MsgQueue.MessageQueue}"
                  ScrollViewer.HorizontalScrollBarVisibility="Auto"
                  ScrollViewer.VerticalScrollBarVisibility="Auto">
             <ListBox.ItemContainerStyle>
@@ -57,7 +61,9 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <!--#endregion-->
 
+        <!--#region Buttons at the bottom -->
         <StackPanel Grid.Row="2" Margin="21,0"
                     HorizontalAlignment="Center"
                     Orientation="Horizontal">
@@ -80,5 +86,6 @@
                               TabIndex="24" />
             </StackPanel>
         </StackPanel>
+        <!--#endregion-->
     </Grid>
 </Page>
