--- a/DFWatch/Pages/SettingsPage.xaml
+++ b/DFWatch/Pages/SettingsPage.xaml
@@ -2,11 +2,12 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:DFWatch"
+      xmlns:dfw="clr-namespace:DFWatch"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:nud="clr-namespace:NumericUpDown"
       mc:Ignorable="d" Title="SettingsPage"
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="450" d:DesignWidth="700"
       Background="{DynamicResource MaterialDesignPaper}"
       TextElement.FontSize="14"
       TextElement.FontWeight="Regular"
@@ -17,118 +18,227 @@
     <Grid>
 
         <Grid Margin="10">
-            <!--#region Row & Column definitions-->
             <Grid.RowDefinitions>
-                <RowDefinition Height="40" />
-                <RowDefinition Height="40" />
-                <RowDefinition Height="40" />
-                <RowDefinition Height="35" />
-                <RowDefinition Height="35" />
-                <RowDefinition Height="35" />
-                <RowDefinition Height="35" />
+                <RowDefinition Height="160" />
+                <RowDefinition />
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-            <!--#endregion-->
 
-            <StackPanel Grid.Row="0" Grid.Column="0"
-                        Orientation="Horizontal">
-                <Label Width="70" Margin="0,7"
-                       Content="Theme" />
-                <ComboBox x:Name="cbxMode"
-                          Width="110" Margin="0"
-                          HorizontalAlignment="Left"
-                          SelectedIndex="{Binding DarkMode,
-                                                  Source={x:Static local:UserSettings.Setting}}"
-                          Style="{StaticResource MaterialDesignComboBox}"
-                          TabIndex="0">
-                    <ComboBox.Items>
-                        <ComboBoxItem Content="{x:Static local:ThemeType.Light}" />
-                        <ComboBoxItem Content="{x:Static local:ThemeType.Dark}" />
-                        <ComboBoxItem Content="{x:Static local:ThemeType.Darker}" />
-                        <ComboBoxItem Content="{x:Static local:ThemeType.System}" />
-                    </ComboBox.Items>
-                </ComboBox>
-            </StackPanel>
+            <Grid Grid.Row="0">
+                <!--#region Row & Column definitions-->
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="45" />
+                    <RowDefinition Height="45" />
+                    <RowDefinition Height="45" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="250" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <!--#endregion-->
 
-            <StackPanel Grid.Row="1" Grid.Column="0"
-                        Orientation="Horizontal">
-                <Label Width="70" Margin="0,7"
-                       Content="Accent" />
-                <ComboBox x:Name="cbxColor"
-                          Width="110" Margin="0"
-                          HorizontalAlignment="Left"
-                          MaxDropDownHeight="170"
-                          SelectedIndex="{Binding PrimaryColor,
-                                                  Source={x:Static local:UserSettings.Setting}}"
-                          Style="{StaticResource MaterialDesignComboBox}"
-                          TabIndex="1">
-                    <ComboBox.Items>
-                        <ComboBoxItem Content="Red" />
-                        <ComboBoxItem Content="Pink" />
-                        <ComboBoxItem Content="Purple" />
-                        <ComboBoxItem Content="Deep Purple" />
-                        <ComboBoxItem Content="Indigo" />
-                        <ComboBoxItem Content="Blue" />
-                        <ComboBoxItem Content="Light Blue" />
-                        <ComboBoxItem Content="Cyan" />
-                        <ComboBoxItem Content="Teal" />
-                        <ComboBoxItem Content="Green" />
-                        <ComboBoxItem Content="Light Green" />
-                        <ComboBoxItem Content="Lime" />
-                        <ComboBoxItem Content="Yellow" />
-                        <ComboBoxItem Content="Amber" />
-                        <ComboBoxItem Content="Orange" />
-                        <ComboBoxItem Content="Deep Orange" />
-                        <ComboBoxItem Content="Brown" />
-                        <ComboBoxItem Content="Grey" />
-                        <ComboBoxItem Content="Blue Grey" />
-                    </ComboBox.Items>
-                </ComboBox>
-            </StackPanel>
+                <StackPanel Grid.Row="0" Grid.Column="0"
+                            Orientation="Horizontal">
+                    <Label Width="70" Margin="0,7"
+                           Content="Theme" />
+                    <ComboBox x:Name="cbxMode"
+                              Width="110" Margin="0"
+                              HorizontalAlignment="Left"
+                              SelectedIndex="{Binding DarkMode,
+                                                      Source={x:Static dfw:UserSettings.Setting}}"
+                              Style="{StaticResource MaterialDesignComboBox}"
+                              TabIndex="0">
+                        <ComboBox.Items>
+                            <ComboBoxItem Content="{x:Static dfw:ThemeType.Light}" />
+                            <ComboBoxItem Content="{x:Static dfw:ThemeType.Dark}" />
+                            <ComboBoxItem Content="{x:Static dfw:ThemeType.Darker}" />
+                            <ComboBoxItem Content="{x:Static dfw:ThemeType.System}" />
+                        </ComboBox.Items>
+                    </ComboBox>
+                </StackPanel>
 
-            <StackPanel Grid.Row="2" Grid.Column="0"
-                        Orientation="Horizontal">
-                <Label Width="70" Margin="0,7"
-                       Content="UI Size" />
-                <ComboBox x:Name="cbxSize"
-                          Width="110" Margin="0"
-                          HorizontalAlignment="Left"
-                          SelectedIndex="{Binding UISize,
-                                                  Source={x:Static local:UserSettings.Setting}}"
-                          Style="{StaticResource MaterialDesignComboBox}"
-                          TabIndex="3">
-                    <ComboBox.Items>
-                        <ComboBoxItem Content="{x:Static local:MySize.Smallest}" />
-                        <ComboBoxItem Content="{x:Static local:MySize.Smaller}" />
-                        <ComboBoxItem Content="{x:Static local:MySize.Small}" />
-                        <ComboBoxItem Content="{x:Static local:MySize.Default}" />
-                        <ComboBoxItem Content="{x:Static local:MySize.Large}" />
-                        <ComboBoxItem Content="{x:Static local:MySize.Larger}" />
-                        <ComboBoxItem Content="{x:Static local:MySize.Largest}" />
-                    </ComboBox.Items>
-                </ComboBox>
-            </StackPanel>
+                <StackPanel Grid.Row="1" Grid.Column="0"
+                            Orientation="Horizontal">
+                    <Label Width="70" Margin="0,7"
+                           Content="Accent" />
+                    <ComboBox x:Name="cbxColor"
+                              Width="110" Margin="0"
+                              HorizontalAlignment="Left"
+                              MaxDropDownHeight="170"
+                              SelectedIndex="{Binding PrimaryColor,
+                                                      Source={x:Static dfw:UserSettings.Setting}}"
+                              Style="{StaticResource MaterialDesignComboBox}"
+                              TabIndex="1">
+                        <ComboBox.Items>
+                            <ComboBoxItem Content="Red" />
+                            <ComboBoxItem Content="Pink" />
+                            <ComboBoxItem Content="Purple" />
+                            <ComboBoxItem Content="Deep Purple" />
+                            <ComboBoxItem Content="Indigo" />
+                            <ComboBoxItem Content="Blue" />
+                            <ComboBoxItem Content="Light Blue" />
+                            <ComboBoxItem Content="Cyan" />
+                            <ComboBoxItem Content="Teal" />
+                            <ComboBoxItem Content="Green" />
+                            <ComboBoxItem Content="Light Green" />
+                            <ComboBoxItem Content="Lime" />
+                            <ComboBoxItem Content="Yellow" />
+                            <ComboBoxItem Content="Amber" />
+                            <ComboBoxItem Content="Orange" />
+                            <ComboBoxItem Content="Deep Orange" />
+                            <ComboBoxItem Content="Brown" />
+                            <ComboBoxItem Content="Grey" />
+                            <ComboBoxItem Content="Blue Grey" />
+                        </ComboBox.Items>
+                    </ComboBox>
+                </StackPanel>
 
+                <StackPanel Grid.Row="2" Grid.Column="0"
+                            Orientation="Horizontal">
+                    <Label Width="70" Margin="0,7"
+                           Content="UI Size" />
+                    <ComboBox x:Name="cbxSize"
+                              Width="110" Margin="0"
+                              HorizontalAlignment="Left"
+                              SelectedIndex="{Binding UISize,
+                                                      Source={x:Static dfw:UserSettings.Setting}}"
+                              Style="{StaticResource MaterialDesignComboBox}"
+                              TabIndex="3">
+                        <ComboBox.Items>
+                            <ComboBoxItem Content="{x:Static dfw:MySize.Smallest}" />
+                            <ComboBoxItem Content="{x:Static dfw:MySize.Smaller}" />
+                            <ComboBoxItem Content="{x:Static dfw:MySize.Small}" />
+                            <ComboBoxItem Content="{x:Static dfw:MySize.Default}" />
+                            <ComboBoxItem Content="{x:Static dfw:MySize.Large}" />
+                            <ComboBoxItem Content="{x:Static dfw:MySize.Larger}" />
+                            <ComboBoxItem Content="{x:Static dfw:MySize.Largest}" />
+                        </ComboBox.Items>
+                    </ComboBox>
+                </StackPanel>
 
+                <StackPanel Grid.Row="0" Grid.Column="1"
+                            Orientation="Horizontal">
+                    <Label Width="140" Margin="0,7"
+                           Content="Log File Size (KB)" />
+                    <nud:IntegerUpDown Width="120" Height="30"
+                                       Margin="5" HorizontalAlignment="Left"
+                                       HorizontalContentAlignment="Stretch"
+                                       Increment="10" Maximum="1000"
+                                       Minimum="10"
+                                       Value="{Binding LogFileSize,
+                                                       Source={x:Static dfw:UserSettings.Setting},
+                                                       Mode=TwoWay}" />
+                </StackPanel>
 
-            <StackPanel Grid.Row="4" Grid.Column="0"
-                        Grid.ColumnSpan="2"
-                        Orientation="Horizontal">
-                <ToggleButton HorizontalAlignment="Left"
-                              md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=CheckBold,
-                                                                            Size=20}"
-                              IsChecked="{Binding IncludeDebug,
-                                                  Source={x:Static local:UserSettings.Setting}}"
-                              Style="{StaticResource MaterialDesignSwitchToggleButton}"
-                              TabIndex="24" />
-                <Label Margin="10,-1,0,0"
-                       Content="Include debug level messages in log file" />
-            </StackPanel>
+                <StackPanel Grid.Row="1" Grid.Column="1"
+                            Orientation="Horizontal">
+                    <Label Width="140" Margin="0,7"
+                           Content="Log Archive Versions" />
+                    <nud:IntegerUpDown Width="120" Height="30"
+                                       Margin="5" HorizontalAlignment="Left"
+                                       HorizontalContentAlignment="Stretch"
+                                       Increment="1" Maximum="100"
+                                       Minimum="1"
+                                       Value="{Binding LogFileVersions,
+                                                       Source={x:Static dfw:UserSettings.Setting},
+                                                       Mode=TwoWay}" />
+                </StackPanel>
+            </Grid>
 
+            <Grid Grid.Row="1">
+                <!--#region Row definitions-->
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                    <RowDefinition Height="30" />
+                </Grid.RowDefinitions>
+                <!--#endregion-->
+
+                <StackPanel Grid.Row="0" Margin="10,0"
+                            Orientation="Horizontal">
+                    <ToggleButton HorizontalAlignment="Left"
+                                  md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=CheckBold,
+                                                                                Size=20}"
+                                  IsChecked="{Binding StartWithWindows,
+                                                      Source={x:Static dfw:UserSettings.Setting}}"
+                                  Style="{StaticResource MaterialDesignSwitchToggleButton}" />
+                    <Label Margin="10,0,0,0"
+                           Content="Start with Windows" />
+                </StackPanel>
+
+                <StackPanel Grid.Row="1" Grid.Column="0"
+                            Grid.ColumnSpan="2" Margin="10,0"
+                            Orientation="Horizontal">
+                    <ToggleButton HorizontalAlignment="Left"
+                                  md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=CheckBold,
+                                                                                Size=20}"
+                                  IsChecked="{Binding ColoredMessages,
+                                                      Source={x:Static dfw:UserSettings.Setting}}"
+                                  Style="{StaticResource MaterialDesignSwitchToggleButton}"
+                                  TabIndex="24" />
+                    <Label Margin="10,-1,0,0"
+                           Content="Color messages in Watcher Log according to severity" />
+                </StackPanel>
+
+                <StackPanel Grid.Row="2" Grid.Column="0"
+                            Grid.ColumnSpan="2" Margin="10,0"
+                            Orientation="Horizontal">
+                    <ToggleButton HorizontalAlignment="Left"
+                                  md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=CheckBold,
+                                                                                Size=20}"
+                                  IsChecked="{Binding KeepOnTop,
+                                                      Source={x:Static dfw:UserSettings.Setting}}"
+                                  Style="{StaticResource MaterialDesignSwitchToggleButton}"
+                                  TabIndex="18" />
+                    <Label Margin="10,-1,0,0"
+                           Content="Keep on top of other windows" />
+                </StackPanel>
+
+                <StackPanel Grid.Row="3" Grid.Column="0"
+                            Grid.ColumnSpan="2" Margin="10,0"
+                            Orientation="Horizontal">
+                    <ToggleButton HorizontalAlignment="Left"
+                                  md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=CheckBold,
+                                                                                Size=20}"
+                                  IsChecked="{Binding IncludeDebugInFile,
+                                                      Source={x:Static dfw:UserSettings.Setting}}"
+                                  Style="{StaticResource MaterialDesignSwitchToggleButton}"
+                                  TabIndex="24" />
+                    <Label Margin="10,-1,0,0"
+                           Content="Include debug level messages in log file" />
+                </StackPanel>
+
+                <StackPanel Grid.Row="4" Grid.Column="0"
+                            Grid.ColumnSpan="2" Margin="10,0"
+                            Orientation="Horizontal">
+                    <ToggleButton HorizontalAlignment="Left"
+                                  md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=CheckBold,
+                                                                                Size=20}"
+                                  IsChecked="{Binding IncludeDebugInGui,
+                                                      Source={x:Static dfw:UserSettings.Setting}}"
+                                  Style="{StaticResource MaterialDesignSwitchToggleButton}"
+                                  TabIndex="24" />
+                    <Label Margin="10,-1,0,0"
+                           Content="Include debug level messages in Watcher Log" />
+                </StackPanel>
+
+                <StackPanel Grid.Row="5" Grid.Column="0"
+                            Grid.ColumnSpan="2" Margin="10,0"
+                            Orientation="Horizontal">
+                    <ToggleButton HorizontalAlignment="Left"
+                                  md:ToggleButtonAssist.OnContent="{md:PackIcon Kind=CheckBold,
+                                                                                Size=20}"
+                                  IsChecked="{Binding MinimizeToTray,
+                                                      Source={x:Static dfw:UserSettings.Setting}}"
+                                  Style="{StaticResource MaterialDesignSwitchToggleButton}"
+                                  TabIndex="24" />
+                    <Label Margin="10,-1,0,0"
+                           Content="Minimize to tray" />
+                </StackPanel>
+            </Grid>
         </Grid>
-
     </Grid>
 </Page>
