--- a/DFWatch/Pages/MainPage.xaml
+++ b/DFWatch/Pages/MainPage.xaml
@@ -112,7 +112,7 @@
                         Orientation="Horizontal">
                 <StackPanel Orientation="Vertical">
                     <Border x:Name="bdrLbxExt"
-                            Height="135" Margin="5,1,15,7"
+                            Height="136" Margin="5,1,15,7"
                             Padding="0" VerticalAlignment="Top"
                             CornerRadius="4">
                         <Border.Style>
@@ -130,7 +130,8 @@
                         </Border.Style>
 
                         <ListBox x:Name="lbxExtensions"
-                                 Width="90" HorizontalAlignment="Left"
+                                 Width="Auto" MinWidth="90"
+                                 HorizontalAlignment="Left"
                                  VerticalAlignment="Top"
                                  SelectionMode="Extended"
                                  Style="{StaticResource MaterialDesignListBox}">
@@ -169,7 +170,7 @@
                 <StackPanel Orientation="Vertical">
                     <TextBox x:Name="tbx1"
                              Width="100" Height="30"
-                             Margin="5,0,5,11" Padding="5,0"
+                             Margin="5,1,5,11" Padding="5,0"
                              HorizontalAlignment="Right"
                              HorizontalContentAlignment="Center"
                              VerticalContentAlignment="Center"
@@ -201,13 +202,13 @@
         <!--#endregion-->
 
         <!--#region Retries and delay-->
-        <StackPanel Grid.Row="1" Margin="275,5,0,0"
+        <StackPanel Grid.Row="1" Margin="290,6,0,0"
                     Orientation="Horizontal">
             <StackPanel Orientation="Vertical">
                 <TextBlock Margin="5,0" FontWeight="SemiBold"
                            Text="# of Retries" />
                 <nud:IntegerUpDown x:Name="numRetries"
-                                   Width="120" Height="32"
+                                   Width="120" Height="30"
                                    Margin="5" HorizontalAlignment="Left"
                                    HorizontalContentAlignment="Stretch"
                                    Increment="1" Maximum="100"
@@ -220,7 +221,7 @@
                 <TextBlock Margin="5,0" FontWeight="SemiBold"
                            Text="Initial Delay (ms)" />
                 <nud:IntegerUpDown x:Name="initialDelay"
-                                   Width="120" Height="32"
+                                   Width="120" Height="30"
                                    Margin="5" HorizontalAlignment="Left"
                                    HorizontalContentAlignment="Stretch"
                                    Increment="250" Maximum="10000"
@@ -233,7 +234,7 @@
         <!--#endregion-->
 
         <!--#region Toggle buttons-->
-        <StackPanel Grid.Row="1" Margin="275,85,0,0"
+        <StackPanel Grid.Row="1" Margin="290,85,0,0"
                     Orientation="Vertical">
 
             <StackPanel Margin="0,0,0,5"
